<resources>
    <string name="app_name">Tripkipedia</string>
    <string name="facebook_app_id" translatable="false">526471011214068</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb526471011214068</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dots">Dots</string>
    <string name="connection_title">No Internet connection</string>
    <string name="connection_not_available">It seems that you are not connected to the Internet. Kindly check your network settings.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="ask_permission_msg">Some permissions are required to do the task.</string>
    <string name="need_permission_title">Need permission(s)</string>
    <string name="err_need_permission_msg">You have previously declined this permission.\nYou must approve this permission in \"Permissions\" in the app settings on your device.</string>
<string name="notifications">Notifications</string>
    <string name="err_firstname">Enter First Name</string>
    <string name="err_firstname_short">First Name is too short</string>
    <string name="err_firstname_invalid">Enter valid first name</string>
    <string name="err_first_name_length">Maximum 15 Character of First Name</string>
    <string name="err_lastname">Enter Last Name</string>
    <string name="err_lastname_invalid">Enter valid last name</string>
    <string name="err_lastname_short">Last Name is too short</string>
    <string name="err_last_name_length">Maximum 15 Character of Last Name</string>
    <string name="err_credential_empty">Email and password both empty</string>
    <string name="err_email">Enter email address</string>
    <string name="err_email_invalid">Invalid email address</string>
    <string name="err_password">Enter password</string>
    <string name="err_new_password">Enter New password</string>
    <string name="err_code">Enter code</string>
    <string name="err_password_">Old password and new password can\'t be same</string>
    <string name="err_character_password">Enter At List One Special Character </string>
    <string name="err_valid_password">Enter At List One Letter, One Number And One Special Character Password</string>
    <string name="err_password_match">New password and confirm password should match.</string>
    <string name="err_venue_name">Enter Venue Name</string>
    <string name="err_company_name">Enter Company Name</string>
    <string name="err_company_type">Enter Company Type</string>
    <string name="err_address">Enter Address</string>
    <string name="err_state">Select State</string>
    <string name="err_city">Select City</string>
    <string name="err_zipcode">Enter Zipcode</string>
    <string name="err_capacity">Select Capacity</string>
    <string name="err_hour_operation">Enter Hours of Operation</string>
    <string name="err_phone_number">Enter Mobile Number</string>
    <string name="err_select_venue">Select Venue</string>
    <string name="err_name">Enter Name</string>
    <string name="err_start_Date_time">Enter Star Date &amp; Time</string>
    <string name="err_end_Date_time">Enter End Date &amp; Time</string>
    <string name="err_available_ticket">Enter Available Ticket</string>
    <string name="err_rate">Enter Rate</string>
    <string name="err_description">Enter Description</string>
    <string name="err_select_image">Select Image</string>
    <string name="failed">Failed</string>
    <string name="hint_username">Username</string>
    <string name="hint_clarity">Clarity</string>
    <string name="hint_cut">Cut</string>
    <string name="hint_polish">Polish</string>
    <string name="hint_symmetry">Symmetry</string>
    <string name="hint_lab">Lab</string>
    <string name="exit_msg">Press Back twice to exit</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_home">Home</string>
    <string name="logout_title">Logout</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_delete">Delete</string>
    <string name="hint_search">Search</string>
    <string name="hint_group">Group</string>
    <string name="title_contacts">Contacts</string>
    <string name="head_selected">Selected</string>
    <string name="removed">Removed</string>
    <string name="menu_contact_req">Contact Requests</string>
    <string name="tab_req_pending">Pending</string>
    <string name="tab_req_sent">Sent</string>
    <string name="tab_req_blocked">Blocked</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_block">Block</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_search_stock">Search Stock</string>
    <string name="done">Done</string>
    <string name="are_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="btn_send_request">Send Request</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="permission_setting">Permission Setting</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="field_required" formatted="false">%s is required.</string>
    <string name="invalid_format" formatted="false">In valid format. Valid format is %s</string>
    <string name="min_format" formatted="false">Min. %s characters is required.</string>
    <string name="err_password_limit">Password must be between 8 and 20 characters</string>
    <string name="email_format">a@aaa.com</string>
    <string name="phonenumber_format">999-999-9999</string>
    <string name="password_min_limit">8</string>
    <string name="startdate">StartDate</string>
    <string name="view_events">VIEW EVENTS</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_tickets">My Tickets</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Sign Out</string>
    <string name="setting_menu">Settings</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="location">Location</string>
    <string name="addevent">AddEvent</string>
    <string name="search">Search</string>
    <string name="btn_skip">Skip</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="st_select_signature">Enable Touch ID / Face ID login</string>
    <string name="ago">AGO</string>
    <string name="sige">SIGE</string>
    <string name="department">Afdelingen</string>
    <string name="media">Media</string>
    <string name="calender">Kalender</string>
    <string name="web_cast">Webcast</string>
    <string name="webinars">webinars</string>
    <string name="web_cast_detail">Webcast Detail</string>
    <string name="facebook">Facebook</string>
    <string name="contact">Kontakto</string>
    <string name="documents">Documents</string>
    <string name="about">About</string>
    <string name="optimalisashon">Optimalisashon</string>
    <string name="schools">SKOL AGO</string>
    <string name="about_us">Sera konosi</string>
    <string name="document">Dokumento</string>
    <string name="notice">Notisia</string>
    <string name="news">Nieuws</string>
    <string name="nav_documents">Documents</string>
    <string name="nav_about">About</string>
    <string name="choose_gallery">Pick From Gallery</string>
    <string name="choose_camera">Take From Camera</string>
    <string name="ago_login">http://www.ago.cw/</string>
    <string name="LoginWith">Login With</string>
    <string name="Loginwith">Login with</string>
    <string name="proceed_as_">or <u>Proceed as Guest</u></string>
    <string name="mobile">Mobile</string>
    <string name="face_id">Face ID</string>
    <string name="or">or</string>
    <string name="explore_and_collect">Explore and Collect</string>
    <string name="enter_phone_number">Enter Your Phone Number</string>
    <string name="phone_email">Please enter your mobile number to verify \n  your account. We will send a verification code \n  to this number via SMS.</string>
    <string name="pnone_2">We will never share your personal data with anyone.\nAll data is encrypted to protect your privacy</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="confrm_code_2">A code was sent to your following</string>
    <string name="resend_verification_code_in_50_seconds">Resend verification code in 50 seconds</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="activities">Activities</string>
    <string name="cuisine">  Cuisine  </string>
    <string name="title">Account Setup</string>
    <string name="dd_mm_yyyy">DD / MM / YYYY</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="view_menu">View Menu</string>
    <string name="order_in_an_xtra_large_combo_consist_of_a_half_half_pizza_choice_of_half_simply_cheese_half_the_big_bbq_or_half_napolitana_chicken_half_romano_margherita_from_pizza_hut_for_just_28_10_u_p_46_90"><![CDATA[Order in an Xtra-Large Combo (consist of a half-half pizza, choice of half Simply Cheese & half The Big BBQ or half Napolitana Chicken & half Romano Margherita) from Pizza Hut for just $28.10 (U.P. $46.90).*]]></string>
    <string name="you_need_to_have_an_existing_grab_account_with_a_verified_email_address_in_order_to_use_grabfood_n_you_need_to_have_the_latest_grab_app_n_orders_can_only_be_made_with_grabpay_credit_debit_cards_or_grabpay_credits">- You need to have an existing Grab account with a verified email address in order to use GrabFood.\n- You need to have the latest Grab app.\n- Orders can only be made with GrabPay (credit/debit cards or GrabPay Credits).</string>
    <string name="good_morning">Good morning,</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="contact_us">Contact Us</string>
    <string name="SG">SG</string>
    <string name="MyTickets">My Tickets</string>
    <string name="ways_to_earn_rewards">Ways to Earn More Rewards</string>
    <string name="search_restaurant_or_activity">Search restaurant or activity</string>
</resources>