<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="match_parent"
        android:background="@color/drawer_bg"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@mipmap/topbar_header_bg_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp35"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp20"
                app:layout_constraintBottom_toBottomOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:src="@mipmap/image_home"
                    app:civ_border_color="@color/white" />

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp10"
                    android:orientation="vertical">

                    <com.tripkipedia.custom.CMTextView
                        style="@style/txt_fff_12"
                        android:includeFontPadding="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_morning"
                        android:textColor="@color/white_50" />

                    <com.tripkipedia.custom.CMTextView
                        android:textStyle="bold"
                        android:includeFontPadding="false"
                        style="@style/txt_fff_18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp0"
                        android:text="James smith" />

                </LinearLayout>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMenuList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:listitem="@layout/item_side_menu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <com.tripkipedia.custom.CMTextView
                android:id="@+id/tvPrivacy"
                style="@style/txt_fff_15"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textColor="@color/white_50" />

            <com.tripkipedia.custom.CMTextView
                android:id="@+id/tvTerms"
                style="@style/txt_fff_15"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service"
                android:textColor="@color/white_50" />

            <com.tripkipedia.custom.CMTextView
                android:id="@+id/tvContactUs"
                style="@style/txt_fff_15"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@color/white_50" />

            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/dp25"
                    android:layout_height="@dimen/dp25"
                    android:src="@drawable/ic_sg" />

                <com.tripkipedia.custom.CMTextView
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_gravity="center"
                    style="@style/txt_fff_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SG"
                    android:textColor="@color/white_50" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>