<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.tripkipedia.ui.choose_interest.viewmodel.ChooseInterestViewModel" />

        <variable
            name="viewClickHandler"
            type="com.tripkipedia.ui.choose_interest.viewmodel.ChooseInterestViewModel.ViewClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/card_shape"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/toopbar"
            layout="@layout/topbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lyStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/toopbar"
            app:layout_constraintTop_toBottomOf="@id/toopbar">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgFirst_Step"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/round_white"
                    android:gravity="center" />

                <com.tripkipedia.custom.CTextView
                    style="@style/txt_ChoosText_20"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.tripkipedia.custom.CTextView
                    android:id="@+id/tvActivities"
                    style="@style/txt_fff_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgFirst_Step"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/activities" />
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/line" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tvSecond_Step"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/second_step"
                    android:gravity="center" />

                <com.tripkipedia.custom.CTextView
                    style="@style/txt_ChoosText_20"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.tripkipedia.custom.CTextView
                    android:id="@+id/tvCuisine"
                    style="@style/txt_fff_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSecond_Step"
                    android:gravity="center"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/cuisine" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/ivNext"
            app:layout_constraintTop_toBottomOf="@id/lyStep">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_List"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/dp210"
                android:layout_margin="@dimen/_5sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_30sdp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp"
            android:src="@drawable/button_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>